--- a/check_and_create_database.ipynb
+++ b/check_and_create_database.ipynb
@@ -39,7 +39,7 @@
     "    if result is True:\n",
     "        print(\"Database Exists!!\")\n",
     "    else:\n",
-    "        print(\"Creating Table with the requried tables....\")\n",
+    "        print(\"Creating database..\")\n",
     "        print(\"Please be patient...\")\n",
     "        cur.execute(\"create database access_control_system\")\n",
     "        cur.execute(\"use access_control_system\")\n",
