--- a/check_and_create_database.ipynb
+++ b/check_and_create_database.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def CheckDatabase():\n",
+    "def CreateDatabase():\n",
     "    \"\"\"\n",
     "    CheckDatabase() -> Checks if the Database required Exists or not\n",
     "    Parameters -> None\n",
